--- a/aitk-server/src/main/resources/application.properties
+++ b/aitk-server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.web.socket.port=9090
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=200MB
+spring.main.allow-circular-references=true
