--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,9 @@
     </modules>
     <properties>
         <java.version>11</java.version>
-        <djl.version>0.24.0</djl.version>
+        <djl.version>0.28.0</djl.version>
         <aitk.version>1.0.0-SNAPSHOT</aitk.version>
+        <djl.paddle.version>0.26.0</djl.paddle.version>
         <h2.version>2.2.224</h2.version>
     </properties>
     <dependencyManagement>
@@ -55,7 +56,7 @@
             <dependency>
                 <groupId>ai.djl.paddlepaddle</groupId>
                 <artifactId>paddlepaddle-engine</artifactId>
-                <version>${djl.version}</version>
+                <version>${djl.paddle.version}</version>
             </dependency>
             <dependency>
                 <groupId>ai.djl.pytorch</groupId>
@@ -76,7 +77,7 @@
             <dependency>
                 <groupId>ai.djl.paddlepaddle</groupId>
                 <artifactId>paddlepaddle-model-zoo</artifactId>
-                <version>${djl.version}</version>
+                <version>${djl.paddle.version}</version>
             </dependency>
             <dependency>
                 <groupId>ai.djl.mxnet</groupId>
