--- a/aitk-server/src/main/resources/application.properties
+++ b/aitk-server/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=200MB
 spring.main.allow-circular-references=true
+
+model.repository.type=gitee
