--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <aitk.version>1.0.0-SNAPSHOT</aitk.version>
         <djl.paddle.version>0.26.0</djl.paddle.version>
         <h2.version>2.2.224</h2.version>
+        <jgit.version>6.10.0.202406032230-r</jgit.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -141,6 +142,12 @@
                 <artifactId>tokenizers</artifactId>
                 <version>${djl.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.eclipse.jgit</groupId>
+                <artifactId>org.eclipse.jgit</artifactId>
+                <version>${jgit.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
