--- a/aitk-model-manager/pom.xml
+++ b/aitk-model-manager/pom.xml
@@ -51,5 +51,9 @@
             <groupId>ai.djl.tensorflow</groupId>
             <artifactId>tensorflow-model-zoo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ai.toolkit</groupId>
+            <artifactId>aitk-llamacpp-engine</artifactId>
+        </dependency>
     </dependencies>
 </project>
