--- a/aitk-front/package.json
+++ b/aitk-front/package.json
@@ -11,10 +11,11 @@
     "axios": "^1.6.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "markdown-it": "^14.1.0",
     "stylus": "^0.60.0",
     "stylus-loader": "^7.1.3",
-    "vue-router": "3.0.2",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
