--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,13 @@
     </modules>
     <properties>
         <java.version>11</java.version>
-        <djl.version>0.28.0</djl.version>
+        <djl.version>0.29.0</djl.version>
+        <djl-wlm.version>0.28.0</djl-wlm.version>
         <aitk.version>1.0.0-SNAPSHOT</aitk.version>
         <djl.paddle.version>0.26.0</djl.paddle.version>
         <h2.version>2.2.224</h2.version>
         <jgit.version>6.10.0.202406032230-r</jgit.version>
-        <llamacpp.version>3.2.1</llamacpp.version>
+        <llamacpp.version>3.3.0</llamacpp.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -54,7 +55,7 @@
             <dependency>
                 <groupId>ai.djl.serving</groupId>
                 <artifactId>wlm</artifactId>
-                <version>${djl.version}</version>
+                <version>${djl-wlm.version}</version>
             </dependency>
             <dependency>
                 <groupId>ai.djl.paddlepaddle</groupId>
